# zipp-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  docker-publish.yml  publish-pypi.yml  validate.yml
examples/: python_client.py
src/zipp_mcp/: __init__.py  __main__.py  cli.py  client.py  server.py  settings.py
tests/: conftest.py  test_client.py  test_server.py
